<resources>
    <string name="app_name">Gallery GIF</string>

    <string name="title">Title</string>
    <string name="splash">Splash</string>
    <string name="button_send">Send</string>
    <string name="button_sign_up">Sign Up</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_description">Description</string>
    <string name="hint_hashtag">Hashtag</string>

    <string name="sign_in_message_no_account">Don\'t have account?</string>

    <string name="content_description_splash_picture">Blot</string>

    <!-- Validation messages -->
    <string name="default_error_email_is_empty">Email field is required</string>
    <string name="default_error_email_is_invalid">Email is not valid</string>
    <string name="error_email_is_empty">Email address field is empty</string>
    <string name="error_email_is_invalid">Email address is not in valid format</string>
    <string name="password_is_empty">Password field is empty</string>
    <string name="password_is_invalid">Password should contain at least one character and number</string>
    <string name="password_min_length_error">Password shouldn\'t be shorter than %1$d symbols</string>
    <string name="password_max_length_error">Password should be at most %1$d symbols long</string>
    <string name="default_error_profile_picture_is_absent">Profile picture is required</string>
    <string name="default_error_profile_picture_is_invalid">Profile picture path is not valid</string>
    <string name="profile_picture_is_absent">!</string>
    <string name="profile_picture_is_invalid">@string/profile_picture_is_absent</string>

    <!-- Taking picture -->
    <string name="picture_capture_with_camera">Capture with Camera</string>
    <string name="picture_pick_from_gallery">Pick from Gallery</string>

    <string name="something_went_wrong">Something went wrong&#8230;</string>
    <string name="server_error">Please check your internet connection.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="empty_list_label">This list is empty</string>
    <string name="empty_list_prompt">Upload a picture and it will show up here.</string>

    <string name="content_description_gallery_picture">Picture thumbnail</string>
    <string name="content_description_upload_picture">Upload picture</string>

    <string name="menu_action_add">Upload Image</string>
    <string name="menu_action_play_gif">Play Gif</string>
    <string name="menu_action_exit">Log Out</string>

    <string name="menu_action_confirm">Confirm</string>
    <string name="fragment_gallery_title">Gallery</string>
    <string name="fragment_upload_title">Upload picture</string>

</resources>